# rust_template

./: Cargo.toml  Dockerfile  build.rs
src/: client.rs  server.rs
