[package]
name = "template"
version = "0.1.0"
author = "dac.bui308@gmail.com"
edition = "2021"

[[bin]]
name = "example_server"
path = "src/server.rs"

[[bin]]
name = "example_client"
path = "src/client.rs"

[dependencies]
prost = "0.13.4"
rdkafka = { version = "0.37.0", features = ["cmake-build"]}
tokio = { version = "1.43.0", features = ["full", "tracing"]}
tokio-stream = "0.1.17"
tonic = "0.12.3"
uuid = "1.12.1"

[build-dependencies]
tonic-build = "*"
